fix: overflow issue on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -19,16 +19,23 @@
   src: url('./assets/fonts/CormorantGaramond-Regular.ttf') format('truetype');
   font-style: normal;
 }
+
 @font-face {
   font-family: 'PlayfairDisplay';
   src: url('./assets/fonts/PlayfairDisplay.ttf') format('truetype');
   font-style: normal;
 }
 
+#root {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
@@ -39,6 +46,7 @@
     transform: translateY(20px);
     opacity: 0;
   }
+
   100% {
     transform: translateY(0);
     opacity: 1;
@@ -68,6 +76,7 @@
     transform: translateX(100px);
     opacity: 0;
   }
+
   100% {
     transform: translateX(0);
     opacity: 1;
@@ -79,11 +88,13 @@
     transform: translateX(50px);
     opacity: 0;
   }
+
   100% {
     transform: translateX(0);
     opacity: 1;
   }
 }
+
 .therapy-card {
   /* border: 1px solid #ddd; */
   padding: 10px;
@@ -106,6 +117,7 @@
   from {
     transform: translateX(0);
   }
+
   to {
     transform: translateX(-100%);
   }
@@ -120,5 +132,6 @@
 
 .marquee-container {
   display: flex;
-  width: max-content; /* Ensure it takes full width */
+  width: max-content;
+  /* Ensure it takes full width */
 }
